--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "anoncoin-dogeos-scanner",
-  "version": "1.0.0",
-  "description": "DogeOS Agent utility to analyze Anoncoin launchpad tokens.",
+  "name": "dogeos-ca-scanner",
+  "version": "1.2.0",
+  "description": "DogeOS Agent utility to analyze token contracts with AI risk analysis.",
   "type": "module",
   "main": "server.mjs",
   "scripts": {
@@ -10,6 +10,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "openai": "^4.68.4"
   }
 }
